Fix: Properly Play Animations / Display Onion Skins During Isolation of Hidden Layers

Also correctly shows onion skins during isolation. Also fixes some edge
cases where drawing on isolated layers didn't work properly.

BUG:394199
(cherry-picked from master: commit 207c48948edb94f81fc41898ffd6e55c596155ea)