libs/image/kis_base_node.h
@@ -390,6 +390,12 @@ public:
     bool belongsToIsolatedGroup() const;
 
     /**
+     * Return whether or not the given node is the root of
+     * isolation.
+     */
+    bool isIsolatedRoot() const;
+
+    /**
      * Set the locked status of this node. Locked nodes cannot be
      * edited.
      */
